--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,15 +3,20 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: gray;
+}
+
 .content{
     padding: 1rem;
+    background-color: #fff;
 }
 
 .content h1{
     margin: 0;
 }
 
-ul.pokemons {
+.pokemons {
     display: grid;
     grid-template-columns: 1fr 1fr;
     list-style: none;
@@ -19,19 +24,70 @@ ul.pokemons {
     margin: 0;
 }
 
-ul.pokemons li{
+.pokemons .grass{
     display: flex;
     flex-direction: column;
-    margin: 0.5rem;
-    padding: 3rem;
-    background-color: #14a06f;
-    color: white;
-    border-radius: 3rem;
-    
+    margin: .5rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: #49d0b0;
+    color: #fff;
 }
 
-ul.pokemons li img {
+.pokemon .detail{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pokemon .type {
+    color: #fff;
+    margin: .25rem 0;
+}
+
+.pokemon .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .detail .types .type {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+.pokemon .number {
+    font-size: .625rem;
+    text-align: right;
+    opacity: .3;
+    color:#000;
+}
+
+.pokemon .detail img {
     max-width: 100%;
     height: 70px;
-    align-self: flex-end;
+}
+
+@media screen and (min-width: 380px) {
+    .pokemons {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 576px) {
+    .pokemons {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .pokemons {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
