--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -49,6 +49,14 @@
         color: #fff;
     
     }
+
+    .pokemon {
+        display: flex;
+        flex-direction: column;
+        margin: .5rem;
+        padding: 1rem;
+        border-radius: 1rem;
+    }
     
     .pokemon .number {
         color: #000;
